[gd_scene load_steps=21 format=3 uid="uid://cdxptgaa26hst"]

[ext_resource type="PackedScene" uid="uid://b14i3s0en1y23" path="res://src/entities/base/entity.tscn" id="1_s8a1s"]
[ext_resource type="Script" uid="uid://jrbwunxsuwfg" path="res://src/entities/unit/base/unit.gd" id="2_isr8v"]
[ext_resource type="Script" uid="uid://5bkjnf1om0l0" path="res://src/entities/unit/base/attributes/health.gd" id="3_y2jhv"]
[ext_resource type="Script" uid="uid://b76r21c2x30ub" path="res://src/entities/unit/base/attributes/stamina.gd" id="4_erk41"]
[ext_resource type="Script" uid="uid://p63j24n3lphh" path="res://src/entities/unit/base/attributes/inventory.gd" id="5_2jrav"]
[ext_resource type="Script" uid="uid://bn8cmnra6eics" path="res://src/entities/unit/base/attributes/movement.gd" id="6_hiiw4"]
[ext_resource type="Script" uid="uid://bjlh85a432gx8" path="res://src/entities/unit/base/attributes/combat.gd" id="7_dg1tc"]
[ext_resource type="Script" uid="uid://b2wl6e0aqne5h" path="res://src/entities/unit/base/attributes/body.gd" id="17_d1oue"]
[ext_resource type="Texture2D" uid="uid://c8sjqrpptkv07" path="res://icon.svg" id="18_v60sh"]
[ext_resource type="Script" uid="uid://dyv0tr0f0wfts" path="res://src/entities/unit/base/attributes/poi_detection.gd" id="19_m636p"]
[ext_resource type="PackedScene" uid="uid://dv00xin6em5o4" path="res://src/detection/radial_detection/radial_detection.tscn" id="20_1bhob"]
[ext_resource type="Script" uid="uid://bl0j7a53he1go" path="res://src/entities/unit/base/attributes/item_detection.gd" id="21_e7gnv"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_b0nqu"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Body/AnimationPlayer:current_animation")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("Body/BodyLower:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("Body/BodyUpper:rotation")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("Body/BodyLower/LegLeft:position")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("Body/BodyLower/LegRight:position")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath("Body/BodyUpper/SpriteArmLeft:position")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath("Body/BodyUpper/SpriteArmRight:position")
properties/7/spawn = true
properties/7/replication_mode = 1

[sub_resource type="Animation" id="Animation_mdweu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyLower/LegRight:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyLower/LegLeft:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyUpper/SpriteArmRight:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -24)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodyUpper/SpriteShoulders:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodyUpper/Head:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BodyUpper/SpriteArmLeft:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 24)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BodyUpper/ItemPivotPoint:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_qdu5c"]
resource_name = "aim_one_handed"
length = 0.134
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyUpper/SpriteArmRight:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 24), Vector2(32, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyUpper/SpriteArmLeft:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -24), Vector2(32, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyUpper/Head:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(5, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodyUpper/SpriteShoulders:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.5708, -1.65806]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodyUpper/ItemPivotPoint:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(32, 0)]
}

[sub_resource type="Animation" id="Animation_eaql3"]
resource_name = "run"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyLower/LegRight:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-8, 16), Vector2(12, 16), Vector2(-8, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyLower/LegLeft:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(12, -16), Vector2(-8, -16), Vector2(12, -16)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyUpper/SpriteArmLeft:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-14, -24), Vector2(16, -24), Vector2(-14, -24)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodyUpper/SpriteArmRight:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(16, 24), Vector2(-14, 24), Vector2(16, 24)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodyUpper/SpriteShoulders:rotation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-1.7017, -1.4399, -1.7017]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BodyUpper/Head:position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -1), Vector2(0, 1), Vector2(0, -1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hgnwk"]
_data = {
&"RESET": SubResource("Animation_mdweu"),
&"aim_one_handed": SubResource("Animation_qdu5c"),
&"run": SubResource("Animation_eaql3")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_s8a1s"]
radius = 17.0

[sub_resource type="Gradient" id="Gradient_ryknw"]
interpolation_mode = 1
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_i13rj"]
gradient = SubResource("Gradient_ryknw")
width = 2048
height = 2048
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[node name="Unit" node_paths=PackedStringArray("body") instance=ExtResource("1_s8a1s")]
script = ExtResource("2_isr8v")
body = NodePath("UnitBody")

[node name="Health" type="Node" parent="." index="1"]
script = ExtResource("3_y2jhv")

[node name="RegenTimer" type="Timer" parent="Health" index="0"]
wait_time = 4.0

[node name="Stamina" type="Node" parent="." index="2"]
script = ExtResource("4_erk41")

[node name="RegenTimer" type="Timer" parent="Stamina" index="0"]
wait_time = 0.1
autostart = true

[node name="Inventory" type="Node" parent="." index="3"]
script = ExtResource("5_2jrav")

[node name="Movement" type="Node" parent="." index="4"]
script = ExtResource("6_hiiw4")

[node name="Combat" type="Node" parent="." index="5"]
script = ExtResource("7_dg1tc")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="." index="6"]
replication_config = SubResource("SceneReplicationConfig_b0nqu")

[node name="UnitBody" type="CharacterBody2D" parent="." index="7"]

[node name="VisualBody" type="Node2D" parent="UnitBody" index="0"]
light_mask = 4
script = ExtResource("17_d1oue")

[node name="BodyLower" type="Node2D" parent="UnitBody/VisualBody" index="0"]

[node name="LegLeft" type="Sprite2D" parent="UnitBody/VisualBody/BodyLower" index="0"]
self_modulate = Color(0, 0, 0, 1)
position = Vector2(0, -16)
scale = Vector2(0.15, 0.15)
texture = ExtResource("18_v60sh")

[node name="LegRight" type="Sprite2D" parent="UnitBody/VisualBody/BodyLower" index="1"]
self_modulate = Color(0, 0, 0, 1)
position = Vector2(0, 16)
scale = Vector2(0.15, 0.15)
texture = ExtResource("18_v60sh")

[node name="BodyUpper" type="Node2D" parent="UnitBody/VisualBody" index="1"]

[node name="ItemPivotPoint" type="Marker2D" parent="UnitBody/VisualBody/BodyUpper" index="0"]
gizmo_extents = 13.4

[node name="SpriteArmLeft" type="Sprite2D" parent="UnitBody/VisualBody/BodyUpper" index="1"]
self_modulate = Color(0.180067, 0.2, 0.174, 1)
position = Vector2(0, 24)
scale = Vector2(0.15, 0.15)
texture = ExtResource("18_v60sh")

[node name="SpriteArmRight" type="Sprite2D" parent="UnitBody/VisualBody/BodyUpper" index="2"]
self_modulate = Color(0.270912, 0.386961, 0.319108, 1)
position = Vector2(0, -24)
scale = Vector2(0.15, 0.15)
texture = ExtResource("18_v60sh")

[node name="SpriteShoulders" type="Sprite2D" parent="UnitBody/VisualBody/BodyUpper" index="3"]
self_modulate = Color(0.240169, 0.111877, 0.885008, 1)
rotation = -1.5708
scale = Vector2(0.5, 0.25)
texture = ExtResource("18_v60sh")

[node name="Head" type="Sprite2D" parent="UnitBody/VisualBody/BodyUpper" index="4"]
self_modulate = Color(0.806524, 0.545222, 1, 1)
scale = Vector2(0.25, 0.25)
texture = ExtResource("18_v60sh")

[node name="Sprite2D" type="Sprite2D" parent="UnitBody/VisualBody/BodyUpper/Head" index="0"]
position = Vector2(84, 0)
scale = Vector2(1, 0.15)
texture = ExtResource("18_v60sh")

[node name="PersonalSpaceRay" type="RayCast2D" parent="UnitBody/VisualBody/BodyUpper" index="5"]
target_position = Vector2(40, 0)
collision_mask = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="UnitBody/VisualBody" index="2"]
callback_mode_process = 0
libraries = {
&"": SubResource("AnimationLibrary_hgnwk")
}

[node name="POIDetection" type="Node2D" parent="UnitBody" index="1"]
visible = false
script = ExtResource("19_m636p")

[node name="ProjectileDetection" parent="UnitBody/POIDetection" index="0" instance=ExtResource("20_1bhob")]
collision_mask = 2
can_be_blocked = true
blocked_by = 8

[node name="UnitDetection" parent="UnitBody/POIDetection" index="1" node_paths=PackedStringArray("_exceptions") instance=ExtResource("20_1bhob")]
_exceptions = [null]
cooldown_enabled = true
can_be_blocked = true
blocked_by = 8

[node name="ItemDetection" parent="UnitBody/POIDetection" index="2" instance=ExtResource("20_1bhob")]
collision_mask = 4
cooldown_enabled = true
can_be_blocked = true
blocked_by = 8

[node name="IntervalTimer" type="Timer" parent="UnitBody/POIDetection" index="3"]
one_shot = true

[node name="ItemDetection" parent="UnitBody" index="2" instance=ExtResource("20_1bhob")]
visible = false
collision_mask = 4
script = ExtResource("21_e7gnv")
can_be_blocked = true
blocked_by = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="UnitBody" index="3"]
visible = false
shape = SubResource("CircleShape2D_s8a1s")

[node name="LightOfWar" type="PointLight2D" parent="UnitBody" index="4"]
enabled = false
range_layer_min = 1
range_layer_max = 1
range_item_cull_mask = 15
shadow_enabled = true
shadow_filter_smooth = 9.4
shadow_item_cull_mask = 31
texture = SubResource("GradientTexture2D_i13rj")
